kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anket-app-deployment
  labels:
    app: anket-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: anket-web
  template:
    metadata:
      labels:
        app: anket-web
    spec:
      containers:
      - name: anket-uygulama
        image: damina001/anket-app:latest
        ports:
        - containerPort: 8000
