kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anket-app-service
spec:
  type: LoadBalancer
  selector:
    app: anket-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
