kubernetes/mongo-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-headless-service
spec:
  clusterIP: None
  selector:
    app: mongodb-stateful
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-statefulset
  labels:
    app: mongodb-stateful
spec:
  serviceName: "mongo-headless-service"
  replicas: 2
  selector:
    matchLabels:
      app: mongodb-stateful
  template:
    metadata:
      labels:
        app: mongodb-stateful
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-personal-disk
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-personal-disk
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
